<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaderboardsbg"
    tools:context=".EditProfile">

    <!-- Top bar (you can style it however you want) -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Back arrow (optional) -->
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center_vertical" />

        <!-- Title text -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:layout_marginStart="85dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Main content container -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/whitebg">

            <!-- First Name -->
            <LinearLayout
                android:layout_width="320sp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Label Outside EditText -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="First Name"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <!-- EditText with Custom Background -->
                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background"/>
            </LinearLayout>


            <!-- Last Name -->
            <LinearLayout
                android:layout_width="320sp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Last Name"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>
                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="3dp"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background" />
            </LinearLayout>

            <!-- Username -->
            <LinearLayout
                android:layout_width="320sp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>
                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="3dp"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="320sp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background" />
            </LinearLayout>
            <!-- Birth date -->
            <LinearLayout
                android:layout_width="320sp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Birth date"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>
                <EditText
                    android:id="@+id/etBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"
                    android:inputType="date"
                    android:layout_marginTop="8dp"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background" />
            </LinearLayout>
            <!-- Gender RadioGroup -->
            <!-- "Gender" label -->
            <TextView
                android:id="@+id/tvGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black" />

            <!-- Container with rounded corners background -->
            <LinearLayout
                android:id="@+id/layoutGenderContainer"
                android:layout_width="320sp"
                android:layout_height="170sp"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_gender_container">

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Female -->
                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:padding="10dp" />

                    <!-- Divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C5BBA5" />

                    <!-- Male -->
                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:padding="8dp" />

                    <!-- Divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C5BBA5" />

                    <!-- Others -->
                    <RadioButton
                        android:id="@+id/rbOthers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:padding="8dp" />

                </RadioGroup>
            </LinearLayout>


            <!-- Save Changes button -->
            <TextView
                android:id="@+id/tvSaveChanges"
                android:layout_width="wrap_content"
                android:layout_height="45sp"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/save_changes"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:background="@drawable/btn_save_changes"
                android:clickable="true"
                android:focusable="true" />

            />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>